updated screenshots with new UI

--- a/docfx_project/site/home/architecture.html
+++ b/docfx_project/site/home/architecture.html
@@ -81,20 +81,49 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="architecture-overview">Architecture Overview</h1>
 
+<h3 id="overview"><strong>Overview</strong></h3>
+<p>This section provides an overview of what the Temenos Continuous Deployment solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
+<p><img src="images/enterprise-view.png" alt="">
+<em>Enterprise View</em></p>
+<p>The Temenos Continuous Deployment solution is composed of the <strong>Extend</strong> and <strong>Assemble</strong> modules to enable the provision of development and Integration test environments. The current state allows for these two modules only. Roadmap features envisage a Deliver module to cover pre-production and production environments.</p>
+<p>The <strong>The  Extend module</strong> is a multi-tenanted provisioning and deployment module that provides Users and/or other systems with self-service management of Environments and provides access to the tools for enhancing Client Licensed Temenos Software. The Extend module enables authorised Users to provision Environments from a list of Templates for non-production use during development, test, integration, implementation and ongoing changes to the Products. The Extend module is a cloud-hosted platform service and manages Environments in either the Temenos cloud or a Client’s Target Cloud account.</p>
+<p>Each <strong>Environment</strong> is a standalone instance of one or more Products or approved third-party applications / products running on the middleware defined in the Template.</p>
+<p>Each <strong>Factory</strong> is formed of an Environment and one or more Test Clients. The Test Clients have their own Templates, which define their infrastructure, software Components and configuration.</p>
+<p>The <strong>The  Assemble module</strong> performs the test pipeline automation, continuous integration (“CI”) and continuous delivery (“CD”) of Client’s changes to Client’s Licensed Temenos Software. The Assemble Module utilises the same technologies as the Extend module, and does:</p>
+<ul>
+<li>deploy Test Clients;</li>
+<li>execute the Clients’ tests;</li>
+<li>orchestrate the deployment of Environments with Factories and the promotion of Packages through a workflow;</li>
+<li>manage storage of test results and application logs;</li>
+<li>manage the lifecycle of test Environments;</li>
+<li>provide a dashboard of test results with links to the underlying manifests, templates and, where appropriate, running Environments.</li>
+</ul>
+<p>The <strong>Temenos Continuous Deployment test result dashboard</strong> is a multi-tenanted web application hosted and operated by Temenos. The dashboard shows historic test results for a Factory within a configured Release and trends through a web UI pulling data from the Assemble Modules local database and test results and application logs in Target Cloud storage.</p>
+<p>The <strong>Temenos Continuous Deployment  Artifact Repository</strong> is a third-party artifact repository “Artifactory by Jfrog” . The repository holds all the built software Components that are referenced by the Templates at the relevant test and deploy Stages. The Client will push all of its Product packages to the Artifact Repository</p>
+<p>The Temenos Continuous Deployment platform has two distinct deployment domains as below:</p>
+<ul>
+<li><p>the “Platform Cloud” where the provisioning software runs;</p>
+</li>
+<li><p>the “Target Cloud” where the T24 environments are provisioned.</p>
+</li>
+</ul>
+<p><br>
+</br></p>
 <h3 id="where-does-temenos-continuous-deployment-platform-fit-into-the-enterprise-it-landscape"><strong>Where does Temenos Continuous Deployment Platform fit into the enterprise IT landscape?</strong></h3>
 <hr>
-<p>The Temenos Continuous Deployment Platform (TCD) promotes the concept of simplified and standardised change promotion through the IT landscape.</p>
+<p>The Temenos Continuous Deployment Platform promotes the concept of simplified and standardised change promotion through the IT landscape.</p>
 <p><img src="images/architecture-arrows.png" alt=""></p>
 <p>Typical organisations have a number of non-production (i.e. development/test) environments, where changes are implemented and checked prior to deployment to production systems. The Devops movement seeks to improve this QA process through means of automation, which both allows an increase in speed in change promotion, and a reduction in the risk of manual errors when promoting changes.</p>
 <p>The Development Platform includes a simple and repeatable method of collating changes (both configuration and customisation) which subsequently is simple to promote from environment to environment.</p>
 <p>In addition, the core function of the Deployment Platform  is to simplify the environment provisioning process, which means if extra stages in the change flow are required (e.g. for additional testing phases), it becomes far simpler to spin up temporary environments for these purposes.</p>
 <p>It should be noted that the Development platfrom only supplies non-production environments (also known as &#39;sandboxes&#39;), which means organisations will still require at least one non-production environment on representative hardware in order to sanity check changes prior to production release (see example below).</p>
 <p><img src="images/architecture-paas-deploy.png" alt=""></p>
-<p><img src="images/architecture-paas-deploy.png" alt=""></p>
 <p>Delegating platform and infrastructure responsibilities to a third party allows organisations to concentrate on what is important to them - applications and data.</p>
 <p><img src="images/architecture-responsabilities.png" alt=""></p>
-<p>The Deployment platform may be used for simple environment provisioning, or may be augmented by additional tools (such as Continuous Integration tooling) to provide a streamlined and automated development experience. The change promotion mechansim within the TCD  is simple to plug into standard CI tooling to push code/config/data from environment to environment.  An example development flow is shown below:</p>
+<p>The Deployment platform may be used for simple environment provisioning, or may be augmented by additional tools (such as Continuous Integration tooling) to provide a streamlined and automated development experience. The change promotion mechansim within the Temenos Continuous Deployment  is simple to plug into standard CI tooling to push code/config/data from environment to environment.  An example development flow is shown below:</p>
 <p><img src="images/architecture-process.png" alt=""></p>
+<p><br>
+</br></p>
 <h3 id="what-are-the-components-of-temenos-continuous-deployment"><strong>What are the components of Temenos Continuous Deployment?</strong></h3>
 <hr>
 <p>Development &amp; Testing environments are managed by the Development Portal, and are comprised of distinct components as described below:</p>
@@ -125,103 +154,33 @@
 </tr>
 </tbody>
 </table>
-<h3 id="what-can-you-do-with-temenos-continuous-deployment"><strong>What can you do with Temenos Continuous Deployment?</strong></h3>
-<hr>
-<p>Below is a list of functions which can be performed using Temenos Continuous Deployment.</p>
-<table>
-<thead>
-<tr>
-<th style="text-align:left">Function</th>
-<th style="text-align:left">Description</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td style="text-align:left">Provision a new environment</td>
-<td style="text-align:left">Create an environment</td>
-</tr>
-<tr>
-<td style="text-align:left">Scale an environment</td>
-<td style="text-align:left">Scale a environment horizontally by adding/removing additional T24 instances for a given database instance</td>
-</tr>
-<tr>
-<td style="text-align:left">Delete a environment</td>
-<td style="text-align:left">Delete a environment</td>
-</tr>
-<tr>
-<td style="text-align:left">Manage a user</td>
-<td style="text-align:left">Create/ edit/ delete a user</td>
-</tr>
-<tr>
-<td style="text-align:left">Apply configuration/ customisation</td>
-<td style="text-align:left">Apply the necessary change components to create a customised environment configuration for an organisation</td>
-</tr>
-<tr>
-<td style="text-align:left">Login to T24</td>
-<td style="text-align:left">Use the resultant customised environment</td>
-</tr>
-<tr>
-<td style="text-align:left">Import a database</td>
-<td style="text-align:left">Import a database into a environment</td>
-</tr>
-<tr>
-<td style="text-align:left">Export a database</td>
-<td style="text-align:left">Export a database from a environment (e.g. to re-import into another environment)</td>
-</tr>
-<tr>
-<td style="text-align:left">Export an environment</td>
-<td style="text-align:left">Export a copy of a environment (file system level) for offline perusal</td>
-</tr>
-</tbody>
-</table>
+<p><br>
+</br></p>
 <h3 id="what-tools-do-i-need-to-use-temenos-continuous-deployment"><strong>What tools do I need to use Temenos Continuous Deployment?</strong></h3>
 <hr>
 <p>Below is a list of tools which may be used to exploit Temenos Continuous Deployment functionality.</p>
 <table>
 <thead>
 <tr>
-<th style="text-align:left">Tool</th>
-<th style="text-align:left">Description and Rationale</th>
+<th>Tool</th>
+<th>Description   and Rationale</th>
 </tr>
 </thead>
 <tbody>
 <tr>
-<td style="text-align:left">Git</td>
-<td style="text-align:left">Git (/ɡɪt/) is a version control system for tracking changes in computer files and coordinating work on those files among multiple people.  A client program for Git is required to push artefacts into the configuration repository.</td>
+<td>Git</td>
+<td>Git   (/ɡɪt/) is a version control system for tracking changes in computer files   and coordinating work on those files among multiple people. A client program   for Git is required to push artifacts into the configuration repository.</td>
 </tr>
 <tr>
-<td style="text-align:left">SFTP Client</td>
-<td style="text-align:left">SFTP is the protocol used to download file exports (environment or database exports)</td>
+<td>SFTP   Client</td>
+<td>SFTP   is the protocol used to download file exports (environment or database   exports)</td>
 </tr>
 <tr>
-<td style="text-align:left">Continuous Integration Tool (Optional)</td>
-<td style="text-align:left">Continuous Integration tools may be used to help automate change promotion between environments.  There is no CI tool provided as part of the Temenos Continuous Deployment, but these are useful in reducing manual tasks when managing environments.</td>
-</tr>
-<tr>
-<td style="text-align:left">Design Studio (Optional)</td>
-<td style="text-align:left">Design Studio is the IDE (Integrated Development Environment) produced by Temenos for developing changes in T24 systems.  Design Studio itself does not form part of the Deployment Platform, but change outputs from this tool are supported within the Configuration Repository.</td>
+<td>Design   Studio</td>
+<td>Design   Studio is the IDE (Integrated Development Environment) produced by Temenos   for developing changes in T24 systems. Design Studio itself does not form   part of the Deployment Platform, but change outputs from this tool are   supported within the Configuration Repository.</td>
 </tr>
 </tbody>
 </table>
-<h3 id="enterprise-view"><strong>Enterprise View</strong></h3>
-<p>This section provides an overview of what the TCD solution is, and how it fits in with the wider Temenos and bank enterprise.</p>
-<p><img src="images/enterprise-view.png" alt="">
-<em>Enterprise View</em></p>
-<p>The TCD solution is composed of the <strong>Extend</strong> and <strong>Assemble</strong> modules to enable the provision of development and Integration test environments. The current state allows for these two modules only. Roadmap features envisage a Deliver module to cover pre-production and production environments.</p>
-<p>The <strong>TCD Extend module</strong> is a multi-tenanted provisioning and deployment module that provides Users and/or other systems with self-service management of Environments and provides access to the tools for enhancing Client Licensed Temenos Software. The Extend module enables authorised Users to provision Environments from a list of Templates for non-production use during development, test, integration, implementation and ongoing changes to the Products. The Extend module is a cloud-hosted platform service and manages Environments in either the Temenos cloud or a Client’s Target Cloud account.</p>
-<p>Each <strong>Environment</strong> is a standalone instance of one or more Products or approved third-party applications / products running on the middleware defined in the Template.</p>
-<p>Each <strong>Factory</strong> is formed of an Environment and one or more Test Clients. The Test Clients have their own Templates, which define their infrastructure, software Components and configuration.</p>
-<p>The <strong>TCD Assemble module</strong> performs the test pipeline automation, continuous integration (“CI”) and continuous delivery (“CD”) of Client’s changes to Client’s Licensed Temenos Software. The Assemble Module utilises the same technologies as the Extend module, and does:</p>
-<ul>
-<li>deploy Test Clients;</li>
-<li>execute the Clients’ tests;</li>
-<li>orchestrate the deployment of Environments with Factories and the promotion of Packages through a workflow;</li>
-<li>manage storage of test results and application logs;</li>
-<li>manage the lifecycle of test Environments;</li>
-<li>provide a dashboard of test results with links to the underlying manifests, templates and, where appropriate, running Environments.</li>
-</ul>
-<p>The <strong>TCD test result dashboard</strong> is a multi-tenanted web application hosted and operated by Temenos. The dashboard shows historic test results for a Factory within a configured Release and trends through a web UI pulling data from the Assemble Modules local database and test results and application logs in Target Cloud storage.</p>
-<p>The <strong>TCD Artefact Repository</strong> is a third-party artefact repository “Artifactory by Jfrog” . The repository holds all the built software Components that are referenced by the Templates at the relevant test and deploy Stages. The Client will push all of its Product packages to the Artefact Repository</p>
 <p><br></p>
               <hr>
               
