--- a/docfx_project/site/home/techguides/environment-basic-operations.html
+++ b/docfx_project/site/home/techguides/environment-basic-operations.html
@@ -117,14 +117,17 @@
 </ul>
 <p><br></p>
 <ul>
-<li><p><strong>Editing</strong> an environment - allows you to change the name and the description of an environment</p>
-<p><img src="images/button-edit.png" alt="start"> </p>
+<li><p><strong>Edit environment</strong> an environment - allows you to change the name and the description of an environment</p>
+<p><img src="images/edit-environment.png" alt=""> </p>
 </li>
 </ul>
 <p><br></p>
 <ul>
-<li><p><strong>Deleting</strong> and environment - removes all resources including VMs and configuration repository that are part of an Environment</p>
-<p><img src="images/button-delete.png" alt="delete"> </p>
+<li><p><strong>Delete environment</strong> - removes all resources including VMs and configuration repository that are part of an Environment</p>
+<p><img src="images/delete-button.png" alt=""> </p>
+</li>
+<li><p><strong>Customize template</strong> - the operation triggered by the button will copy in the environment repository all the template files used to create the environment</p>
+<p><img src="images/customize-template.png" alt=""> </p>
 </li>
 </ul>
 <h2 id="t24-release-section---available-actions">T24 Release section - available actions</h2>
