--- a/docfx_project/site/home/toc.html
+++ b/docfx_project/site/home/toc.html
@@ -80,14 +80,8 @@
               <a href="overview.html" name="" title="Overview">Overview</a>
             </li>
             <li>
-              <span class="expand-stub"></span>
               <a href="architecture.html" name="" title="Architecture">Architecture</a>
-                
-                <ul class="nav level2">
-                  <li>
-                    <a href="tcd-hosting-options.html" name="" title="TCD Hosting Options">TCD Hosting Options</a>
-                  </li>
-                </ul>  </li>
+            </li>
             <li>
               <span class="expand-stub"></span>
               <a href="extend.html" name="" title="Extend">Extend</a>
@@ -141,7 +135,7 @@
                           <a href="http://documentation.temenos.cloud/home/pdf/transact-components.pdf" name="" title="Transact Templates Overview">Transact Templates Overview</a>
                         </li>
                         <li>
-                          <a href="http://documentation.temenos.cloud/home/pdf/wealthsuite-components.pdf" name="" title="WealthSuite Templates Overview">WealthSuite Templates Overview</a>
+                          <a href="http://documentation.temenos.cloud/home/techguides/selenium-template.html" name="" title="Selenium Template overview">Selenium Template overview</a>
                         </li>
                       </ul>  </li>
                   <li>
@@ -187,7 +181,7 @@
                     <a href="techguides/factories.html" name="" title="Manage Factories">Manage Factories</a>
                   </li>
                   <li>
-                    <a href="techguides/factory-migration.html" name="" title="Manage Factory Migrations">Manage Factory Migrations</a>
+                    <a href="techguides/manage-test-scripts.html" name="" title="Manage Test Scripts">Manage Test Scripts</a>
                   </li>
                   <li>
                     <a href="techguides/stage-testcases.html" name="" title="Manage Test Cases Upload">Manage Test Cases Upload</a>
