--- a/docfx_project/site/home/techguides/components-products.html
+++ b/docfx_project/site/home/techguides/components-products.html
@@ -97,6 +97,8 @@ An organization can define as many components as needed but should have all mand
 <li><p>Display Name</p>
 </li>
 </ul>
+<p><br>
+</br></p>
 <h2 id="component-type">Component Type</h2>
 <p>The TCP uses a convention/ protocol to deploy all parts required to run a full-fledged instance of T24 (Or any other product supported by a template). Such parts to constitute a complete system are called <strong>components</strong>. </p>
 <p>The T24 installation may have the following components (No exhaustive or inclusive):</p>
@@ -110,6 +112,12 @@ An organization can define as many components as needed but should have all mand
 <p>The names of these parts / Component Types are fixed and are not user editable. This is managed internally by the Temenos Continuous Deployment Platform admin/ development group and can only be changed or modified by this group. </p>
 <p>Each component type represents a deployable unit and has an ansible script associated to it. </p>
 <p>These components have a structure associated and work in a standardized manner across different deployment stacks (OS, App server variations, DB variations etc).</p>
+<blockquote><p><p style="font-size:18px"><span style="color:red"><strong>WARNING:</strong></span><span style="color:red">
+<span style="color:red"></span><span style="color:red">make sure to follow the naming convention as defined by the Temenos team. Any adjustments to the components&#39; title such as adding special characters or spaces will result in a failed factory run.<p>
+<p>Example: downloading the same file multiple times auto-numbers the file name from 1 onwards - t24-jars-63688104355895 <strong>(1)</strong>.zip and adds a space as well. Please use the .zip file that has the original title - <strong>t24-jars-63688104355895.zip</strong>. </p>
+</span></span></blockquote>
+<p><br>
+</br></p>
 <h1 id="how-to-set-up-delete-components">How to Set Up/ Delete Components</h1>
 <h2 id="set-up-create-a-component">Set-up/ Create a Component</h2>
 <ul>
@@ -129,18 +137,26 @@ An organization can define as many components as needed but should have all mand
 <p>A folder is automatically created into the repository <em>(we are using JFrog Artifactory)</em> with the name of your component and will be always created under the default <strong>stable_dev</strong> stage. This is the path where the components&#39; files should be uploaded as explained on the next steps.</p>
 <p><em>(Please note that the components&#39; artifacts can be uploaded any time before running a factory).</em></p>
 <p><em>(If the related artifacts are not uploaded, running the factory will not be possible and an error message will be thrown).</em></p>
+<p><br>
+</br></p>
 <h1 id="how-to-login-to-artifactory">How to login to Artifactory</h1>
 <p>Every user created in the Temenos Continuous Deployment Platform can log in with the platform’s credential on the Artifactory server as well. Follow the steps below to login to the Artifactory:</p>
 <ul>
-<li>go on the self-side menu on the portal and click on <strong>Metadata</strong>. 
-<img src="images/sanity-general.png" alt=""></li>
-<li>here are displayed the metadata settings:
-<img src="images/components-and-products-artifactoryurl.png" alt=""></li>
-<li>copy the <strong>Artifactory URL</strong> and open it in another browser. To login use with your credentials from the Temenos Continuous Deployment Platform. This is how your Artifactory will be displayed:
-<img src="images/artifactory-login.png" alt=""></li>
-<li>to see the artifactory repository, click on the Artifactory icon from the left-side menu. The repository belonging to your organisation will be displayed (to make sure you expand the right repository, always check the naming convention: repo-1dq4zcowcn75s1, where what follows after &#39;repo-&#39; represents the ID of your organisation:
-<img src="images/local-repository.png" alt=""></li>
+<li><p>go on the left-side menu on the portal and click on <strong>Metadata</strong>. 
+<img src="images/sanity-general.png" alt=""></p>
+</li>
+<li><p>here are the metadata settings:
+<img src="images/components-and-products-artifactoryurl.png" alt=""></p>
+</li>
+<li><p>copy the <strong>Artifactory URL</strong> and open it in another browser. To login use with your credentials from the Temenos Continuous Deployment Platform. This is how your Artifactory will be displayed:
+<img src="images/artifactory-login.png" alt=""></p>
+</li>
+<li><p>to see the artifactory repository, click on the Artifactory icon from the left-side menu. The repository belonging to your organisation will be displayed (to make sure you expand the right repository, always check the naming convention: repo-1dq4zcowcn75s1, where what follows after &#39;repo-&#39; represents the ID of your organisation:
+<img src="images/local-repository.png" alt=""></p>
+</li>
 </ul>
+<p><br>
+</br></p>
 <h2 id="how-to-upload-binaries-into-the-artifactory">How to upload binaries into the Artifactory</h2>
 <p>The users are enabled to download the existing artifacts or upload new artifacts that will be used for factories. This process can be done in two ways:</p>
 <p><strong>A. Manually access the artifactory and upload the required binary (recommended).</strong></p>
@@ -183,6 +199,8 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <img src="images/components-products-mobaxterm.png" alt=""></p>
 <p>Once the command is run, the binary is uploaded on the Artifactory:
 <img src="images/components-products-uploaded-binary.png" alt=""></p>
+<p><br>
+</br></p>
 <h2 id="pre-requisites-and-best-practices"><strong>Pre-requisites and best practices:</strong></h2>
 <ul>
 <li>ensure that the component name also has information about its version;</li>
@@ -201,26 +219,39 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <ul>
 <li>ensure that components are uploaded to the appropriate folders (the URL and folder names can be found from the component definition pages of the TCD portal);</li>
 <li>if the component is uploaded in a .zip format, it it recommended to have a text file describing what is included in the package/ provide reference to the code commit tags to find what is included in the package;</li>
-<li>do not delete/ edit/ create components/ folders in the artifactory.  TCD Portal’s Product and Component sections must be used to create anything in artifactory.</li>
+<li>do not delete/ edit/ create components/ folders in the artifactory.  TCD Portal’s Product and Component sections must be used to create anything in artifactory;</li>
+<li>our recommendation is to retain the last 10 components in every stage;</li>
 </ul>
+<p><br>
+</br></p>
 <h1 id="which-components-to-add">Which Components to Add</h1>
 <p>In order to know which are the minimum required components that you need to add, you must first check the <strong>Templates Catalog</strong> (see button on the left menu).</p>
 <p>From here, select the template that you want to use:</p>
 <ul>
-<li>Make sure you select first the Template Type (FCM, T24, Tools, Wealth etc.). </li>
-<li>Then from the available Templates Catalog, select the one that you need in order to check the components.</li>
-<li>Under Full Template Content, scroll until you see the <strong>components</strong> section.</li>
-<li><span style="color:red"><strong>Note:</strong></span><span style="color:red"> Usually there are at least two <strong>components</strong> sections: one related to T24 and another one refers to Model Bank Database (or other db). Depending on the template type, there could be more components, so please make sure you scroll down to check entirely the template in order to add all required components.</span></li>
-<li>It is required to add at least all the mandatory components.</li>
-<li><span style="color:red">In addition to the mandatory components, you will need to add those components you need to test - not related to your selected template.</span></li>
-<li>For all added components, make sure you add the related files archive into the artifactory as explained above.</li>
+<li>make sure you select first the Template Type (FCM, T24, Tools, Wealth etc.). </li>
+<li>from the available Templates Catalog, select the one that you need in order to check the components.</li>
+<li>under Full Template Content, scroll until you see the <strong>components</strong> section.</li>
+<li><span style="color:red"><strong>Note:</strong></span><span style="color:red"> usually there are at least two <strong>components</strong> sections: one related to T24 and another one refers to Model Bank Database (or other db). Depending on the template type, there could be more components, so please make sure you scroll down to check entirely the template in order to add all required components.</span></li>
+<li>it is required to add at least all the mandatory components.</li>
+<li><p><span style="color:red">In addition to the mandatory components, you will need to add those components you need to test in the <strong>TestScript</strong> component - this not related to your selected template and the user needs to create it manually.</span></p>
+<blockquote><p><p style="font-size:18px"><span style="color:red"><strong>WARNING:</strong> the TestScript component needs to be a .zip file within a .zip, otherwise the factory run will fail. See example below:</span><span style="color:red">
+<span style="color:red"></span><span style="color:red"><p>
+<p><img src="images/components-test-script.png" alt=""></p>
+</span></span></blockquote>
+</li>
+<li><p>For all added components, make sure you add the related files archive into the artifactory as explained above.</p>
+</li>
 </ul>
 <p><img src="images/products-template.png" alt=""></p>
+<p><br>
+</br></p>
 <h3 id="how-to-delete-a-component">How to Delete a Component</h3>
 <p>Components fields are not editable, so you have only the options to create or to delete them.</p>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">If your component is <strong>attached to a Product</strong>, you will not be able to delete it. <p>
 <p>You need first to delete the product, then return to the component and click <strong>Delete</strong> button.</span></p>
 </div>
+<p><br>
+</br></p>
 <h1 id="products--feature-description">Products – Feature Description</h1>
 <p>A product is a logical grouping of several components. This is just to make it easy for users to select a list of components to deploy instead of selecting each component in a sequence. </p>
 <p>A product has the following fields <em>(all mandatory)</em>:</p>
@@ -233,6 +264,8 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </li>
 </ul>
 <p>Ultimately, a product is used in a factory and will be used eventually to deploy the required components.</p>
+<p><br>
+</br></p>
 <h2 id="how-to-set-up-edit-delete-products">How to Set Up/ Edit/ Delete Products</h2>
 <h3 id="how-to-set-up-create-a-product">How to Set-up/ Create a Product</h3>
 <ul>
@@ -245,6 +278,8 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <p><em>For components, the selection order is not important.</em></p>
 <p><img src="images/products-add-product.png" alt=""></p>
 <p>In addition to the principle product which has all template mandatory components, you will need to create other products - Base Products - that will be used to be tested.</p>
+<p><br>
+</br></p>
 <h3 id="how-to-edit-a-product">How to edit a product</h3>
 <p>You can edit:</p>
 <ul>
@@ -252,6 +287,8 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li>The components field by adding or removing components.</li>
 <li>Just click the edit button, do the changes and then click update.</li>
 </ul>
+<p><br>
+</br></p>
 <h3 id="how-to-delete-a-product">How to delete a product</h3>
 <ul>
 <li>Go to the Products tab and select the product you want to delete.</li>
@@ -261,9 +298,13 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </div>
 <p> To see the details of a component please make sure to first select the stream from the top-right-side menu. The list with the components that belong to the respective stream will be displayed on the left side of the page. The same operation applies for the products:
 <img src="images/components-see-details.png" alt=""></p>
+<p><br>
+</br></p>
 <h1 id="artifactory-view">Artifactory view</h1>
 <p>The artifactory view displays the uploaded components that are available for the particular stages. By expanding the components, the user triggers a download of the respective component zip file.</p>
 <p><img src="images/artifactory_view.png" alt=""></p>
+<p><br>
+</br></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the following permissions need to be enabled for your user:</p>
 <ul>
