--- a/docfx_project/site/home/techguides/stage.html
+++ b/docfx_project/site/home/techguides/stage.html
@@ -119,7 +119,7 @@
 <li>Suppose we have created a stage named Primary_stage. No matter if we have configured further components and products, we can just go and delete this stage.</li>
 </ul>
 <p>Any other created stage can be deleted at any moment as it is not dependent of the subsequent features added such as components and products. Components and Products belong to the streams.</p>
-<p>Example of the default stage defined into the metadata (you can set any name you prefer instead of <em>devstream</em>):</p>
+<p>Example of the default stage defined into the metadata (you can set any name you prefer instead of <em>Primary_stage</em>):</p>
 <p><img src="images/stage-metadata.png" alt=""></p>
 <p> To see the details of a stage please make sure to first select the stream from the top-right-side menu. The list with the stages that belong to the respective stream will be displayed on the left side of the page:
 <img src="images/stages-see-details.png" alt=""></p>
