--- a/docfx_project/site/home/techguides/stream.html
+++ b/docfx_project/site/home/techguides/stream.html
@@ -143,7 +143,7 @@ The parts of the stream are listed below:</p>
 <ul>
 <li>Go back to Streams and you will notice that your stream has only the Primary Stage associated, therefore you are able to delete the stream. Click the Delete button.</li>
 </ul>
-<p><img src="./images/streams-delete-streams.png" alt=""></p>
+<p><img src="images/streams-delete-streams.png" alt=""></p>
 <p>If you have added other stages and also components and products, first delete all the products, then the components, then the associated stages and finally you will be able to delete the stream. In case you skip one of these features deletion, the system will notify that is not possible to delete the respective stage.</p>
 <p> To see the details of a stream please select it from the streams&#39; list:
  <img src="images/streams-see-details.png" alt=""></p>
