--- a/home/techguides/automated-factories.html
+++ b/home/techguides/automated-factories.html
@@ -130,7 +130,7 @@
 <li>Add a <strong>Factory Name</strong>: choose a meaningful name for your factory</li>
 <li>Add a <strong>Factory Description</strong>: insert a description that will help knowing what the factory is about</li>
 <li>Click <strong>Next</strong>
-<img src="./images/factory-details.png" alt="factory-details"></li>
+<img src="images/factory-details.png" alt="factory-details"></li>
 </ol>
 <h2 id="product-configuration">Product Configuration</h2>
 <p>This tab represents the test configuration that holds the template, the products and the source stage that are pre-tested from the perspective of the current factory.</p>
@@ -140,7 +140,7 @@
 <li><strong>Source Stage</strong>: this is the stage with the stable version of components</li>
 <li><strong>Select Other Products</strong>: you can select more products that are required to test the Principle products</li>
 <li>click <strong>Next</strong>
-<img src="./images/factory-product-configuration.png" alt="factory-product-configuration"> </li>
+<img src="images/factory-product-configuration.png" alt="factory-product-configuration"> </li>
 </ul>
 <h2 id="test-configuration">Test Configuration</h2>
 <p>The Test Configuration consists in in-build service tasks and is used to  trigger tests for a given factory-run, trigger export of application logs.</p>
@@ -159,7 +159,7 @@ Test Stage: represents a stable version of components that is pre-tested from th
 </li>
 </ul>
 <p>At the end of this step, when the first round of tests is completed, the test VM will be deleted, but it will not stop the T24 environment (this will be done at the end of the workflow)</p>
-<p><img src="./images/factory-test-configuration.png" alt="factory-product-configuration"> </p>
+<p><img src="images/factory-test-configuration.png" alt="factory-product-configuration"> </p>
 <p>Assuming that you select a customized workflow with COB you need to fill in additional steps, such as:</p>
 <ul>
 <li>type in the ID of the TSA.SERVICE record for which COB has to be run. The id can be either group specific id (eg: COB-1, COB-001) , company specific id (eg: COB-GB0010001) or COB. Important: currently the platform can handle 20 agents at max, including the online services.</li>
@@ -168,7 +168,7 @@ Test Stage: represents a stable version of components that is pre-tested from th
 </br></p>
 <h2 id="promotion-configuration">Promotion Configuration</h2>
 <p>This configuration enables the user to select all the required principle products along with the target stage to which they will be promoted after a successful factory run. In addition, the user can select the Test Components along with the target stage if they need promotion as well. 
-<img src="./images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
+<img src="images/factory-promotion-configuration.png" alt="factory-promotion-configuration"></p>
 <blockquote><p>Note: it is not mandatory to fill in the Tests to Promote field and the associated Select target stage for Tests from the right side. </p>
 </blockquote>
 <h4 id="factory-scheduler">Factory Scheduler</h4>
@@ -178,7 +178,7 @@ Test Stage: represents a stable version of components that is pre-tested from th
 <li>if the factory run test is successful you can choose to stop/ or keep running the T24 environment</li>
 <li><p>the same applies for the Factory Run Failure scenario
 The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options are aimed to be used for costs purposes
-<img src="./images/factory-scheduler.png" alt="factory-scheduler"></p>
+<img src="images/factory-scheduler.png" alt="factory-scheduler"></p>
 <p>To see the details of a factory please make sure to first select the stream and the stage from the top-right-side menu. If you have more stages, click on the stage where you created the respective factory. The list with the factories that belong to the respective stage will be displayed on the left side of the page:
 <img src="images/factory-see-details.png" alt=""></p>
 </li>
@@ -196,7 +196,7 @@ The &#39;Stop Environment&#39; and &#39;Keep Running Environment&#39; options ar
 <li>You can easily delete a factory by clicking the <strong>delete</strong> button</li>
 <li>The products, stages and streams created before can be re-used.</li>
 </ul>
-<p><img src="./images/factory-edit-delete.png" alt="factory-scheduler"></p>
+<p><img src="images/factory-edit-delete.png" alt="factory-scheduler"></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the following permissions need to be enabled for your user:</p>
 <ul>
