--- a/home/techguides/clone-environment.html
+++ b/home/techguides/clone-environment.html
@@ -105,7 +105,7 @@
 </li>
 </ol>
 <p>You will receive a notification on the screen that the environment cloning has been initiated.</p>
-<p><img src="./images/clone-env-details.png" alt=""> </p>
+<p><img src="images/clone-env-details.png" alt=""> </p>
 <div class="NOTE"><h5>Note</h5><p>Use the <strong>Refresh List</strong> button in order to see the new actions.</p>
 </div>
 <ul>
