--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -90,7 +90,7 @@
 <li><p><strong>Start All User Environments</strong>, <strong>Stop All User Environments</strong>, <strong>Refresh</strong>, Create <strong>New Environment</strong></p>
 </li>
 </ol>
-<p><img src="./images/buttons-all.png" alt=""></p>
+<p><img src="images/buttons-all.png" alt=""></p>
 <p><br></p>
 <h2 id="environment-buttons">Environment buttons</h2>
 <p>The user can also <strong>clone</strong>, <strong>edit</strong>, <strong>delete</strong>, <strong>start</strong>, <strong>stop</strong>, <strong>rebuild</strong>, <strong>export the database</strong> and <strong>deploy the repository</strong> and use the endpoints related to T24, the database or to the repository:</p>
@@ -125,7 +125,7 @@
 <li><p><strong>Delete environment</strong> - removes all resources including VMs and configuration repository that are part of an Environment</p>
 </li>
 </ul>
-<p><img src="./images/actions-button.png" alt=""> 
+<p><img src="images/actions-button.png" alt=""> 
 <br></p>
 </li>
 </ul>
