--- a/home/techguides/environment-creation-in-paas.html
+++ b/home/techguides/environment-creation-in-paas.html
@@ -96,7 +96,7 @@
 <li>Click <strong>Create environment</strong>
 All fields are mandatory except &#39;Labels&#39;.</li>
 </ul>
-<p><img src="./images/env-new.png" alt=""></p>
+<p><img src="images/env-new.png" alt=""></p>
 <p><br></p>
 <div class="NOTE"><h5>Note</h5><p>The environment creation time will vary, depending on the selected template.</p>
 </div>
