--- a/home/techguides/manage-environments.html
+++ b/home/techguides/manage-environments.html
@@ -108,7 +108,7 @@
 <li>Click <strong>Create environment</strong>
 All fields are mandatory except &#39;Labels&#39;</li>
 </ul>
-<p><img src="./images/env-new.png" alt=""></p>
+<p><img src="images/env-new.png" alt=""></p>
 <p><br></p>
 <p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following a manual/ automated factory:
 <img src="images/env-list.png" alt=""></p>
@@ -118,7 +118,7 @@ All fields are mandatory except &#39;Labels&#39;</li>
 <li><strong>Templates</strong></li>
 </ul>
 <p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
-<p><img src="./images/template-details.png" alt=""></p>
+<p><img src="images/template-details.png" alt=""></p>
 <ol>
 <li><p>Click on the <strong>Template Type</strong> and select for one of the applications, for example T24 to see the templates that are available for your organisation. </p>
 </li>
@@ -135,11 +135,11 @@ All fields are mandatory except &#39;Labels&#39;</li>
 <li><p>The <strong>Components List</strong> - these can be filtered as the user wants</p>
 </li>
 </ol>
-<p><img src="./images/template-components-list.png" alt=""></p>
+<p><img src="images/template-components-list.png" alt=""></p>
 <ol>
 <li>The <strong>Template Content</strong></li>
 </ol>
-<p><img src="./images/templates-content.png" alt=""></p>
+<p><img src="images/templates-content.png" alt=""></p>
 <h1 id="user-roles-required">User Roles Required#</h1>
 <p>To be able to create an environment the below permissions need to be enabled for your user:</p>
 <ul>
