--- a/home/techguides/manage-test-scripts.html
+++ b/home/techguides/manage-test-scripts.html
@@ -101,7 +101,7 @@
 </br></p>
 </li>
 <li><p>Create a new <strong>Component</strong> (eg. TestCase01) in the portal. The <strong>Component Type</strong> will be ‘TestScript’ </p>
-<p><img src="./images/factory-migration-5.png" alt="factory-migration-5">
+<p><img src="images/factory-migration-5.png" alt="factory-migration-5">
 <br>
 </br></p>
 </li>
