--- a/home/techguides/manage-workflows.html
+++ b/home/techguides/manage-workflows.html
@@ -121,12 +121,12 @@
 <li><p>A new window opens. Add a <strong>name</strong> and a <strong>description</strong> to the workflow</p>
 </li>
 <li><p>To define the workflow, simply drag and drop the shapes onto the canvas and connect them with arrows</p>
-<p><img src="./images/workflow-tab.png" alt=""> </p>
+<p><img src="images/workflow-tab.png" alt=""> </p>
 </li>
 <li><p>To connect the elements click on Add Edge; to delete any edge or element, select the item first then click on Delete Selected</p>
 </li>
 <li><p>When the elements have been placed and connected accordingly, click Save Workflow. Based on the above diagram, a particular workflow will be sent to workflow service to proceed with the steps defined by the user</p>
-<p><img src="./images/add-edge.png" alt=""></p>
+<p><img src="images/add-edge.png" alt=""></p>
 </li>
 </ol>
 <p>After the workflow is created, the user can add this workflow to any factory within his organisation (learn <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a> how to set up factories)</p>
