--- a/home/techguides/stage.html
+++ b/home/techguides/stage.html
@@ -107,12 +107,12 @@
 </li>
 </ol>
 <p><strong>Note</strong>: <em>Instead of choosing the enable option, you can create a disabled stage and enable it later, but the default option should be enable.</em></p>
-<p><img src="./images/streams-create-stage.png" alt=""></p>
+<p><img src="images/streams-create-stage.png" alt=""></p>
 <p><br></p>
 <h2 id="edit-a-stage">Edit a Stage</h2>
 <p>A stage can have only the description edited/ changed, but not the name. Why? Because when creating a stage, a folder is created automatically in the Artifactory containing the stage name. This folder will contain the components that you may be added for the respective stage.</p>
 <p>Just click the edit button, change the description and then click update.</p>
-<p><img src="./images/edit-stage.png" alt=""></p>
+<p><img src="images/edit-stage.png" alt=""></p>
 <p><br></p>
 <h2 id="default-stage-configuration-stage">Default Stage (Configuration Stage)</h2>
 <p>After logging to the portal, go to the <strong>General</strong> button on the left menu. Here you can see and edit the metadata.</p>
@@ -136,7 +136,7 @@
 <li><p>From the top-right select the <strong>Stream</strong> name you are interested in</p>
 </li>
 <li><p>The list with the stages that belong to the respective stream will be displayed on the left side of the page:
-<img src="./images/stages-see-details.png" alt=""></p>
+<img src="images/stages-see-details.png" alt=""></p>
 </li>
 </ol>
 <p>Hover over the <strong>Name</strong> to sort the streams alphabetically.</p>
