--- a/home/techguides/t24-development.html
+++ b/home/techguides/t24-development.html
@@ -103,7 +103,7 @@
 <p>For more details about the deployment, check the following <a href="use-gitlab-repository.md#trigger-deployment"><ins><strong>steps</strong></ins></a>.</p>
 <h2 id="check-jbc-routines-deployment-to-sandbox">Check jBC routines deployment to Sandbox</h2>
 <ul>
-<li>Log-in to your organisation into the Temenos Continuos Deployment Platform, go to your enviroment page and click on the <strong>Monitor Application</strong> Endpoint for the T24 application.<br><img src="./images/t24-monitor-app.png" alt="monitor application"><br><br></li>
+<li>Log-in to your organisation into the Temenos Continuos Deployment Platform, go to your enviroment page and click on the <strong>Monitor Application</strong> Endpoint for the T24 application.<br><img src="images/t24-monitor-app.png" alt="monitor application"><br><br></li>
 <li>The TAFJEE page is opened. Click <strong>tShow</strong> to check if your developed routines were deployed in your sandbox. Details like the compilation date or the jar that contains the class of those routines can be checked.<br><img src="images/monitor-application-tshow.png" alt="monitor application"><br><br></li>
 <li>In the next screen, input your routine name and click <strong>Submit</strong>.<br><img src="images/monitor-application-submit.png" alt="monitor application"><br><br></li>
 <li>In the next screen, the details of your routine can be seen.<br><img src="images/monitor-application-result.png" alt="monitor application"><br><br></li>
