--- a/home/techguides/user-creation-in-paas.html
+++ b/home/techguides/user-creation-in-paas.html
@@ -101,7 +101,7 @@
 <li><p>Create a new user by clicking the <strong>New user</strong> button on the top-right corner. Fill in the username, email, password and the user role (the SSH Key can be added later on if needed):</p>
 </li>
 </ol>
-<p><img src="./images/create-user.png" alt=""></p>
+<p><img src="images/create-user.png" alt=""></p>
 <ol>
 <li>Click <strong>Create</strong></li>
 </ol>
@@ -113,7 +113,7 @@ responsibility to inform the new user about its credentials and set of permissio
 <p><img src="images/user-change-password.png" alt="user-change-password"></p>
 <h1 id="user-roles-management">User Roles Management</h1>
 <p>By default, when your organisation is created, Temenos will provide you the link and access instructions to your designated organisation administrator (the first and only user with full rights on the platform).</p>
-<p><img src="./images/see-user-role.png" alt=""></p>
+<p><img src="images/see-user-role.png" alt=""></p>
 <ol>
 <li><p>Click on the <strong>Roles</strong> tab to see the available list of roles within your organisation</p>
 </li>
@@ -124,7 +124,7 @@ responsibility to inform the new user about its credentials and set of permissio
 <li><p>The administrator can create more users and navigate to the Roles section on the portal to assign various permissions to each user. To create a role, click on <strong>New Role</strong> on top-right and fill in the blanks:</p>
 </li>
 </ol>
-<p><img src="./images/create-user-role.png" alt=""></p>
+<p><img src="images/create-user-role.png" alt=""></p>
 <p>The admin can select which permissions to set to each user.
 <img src="images/create-user-role-permissions.png" alt="user"></p>
 <p>Once the role is created, the admin can assign it to a specific user:</p>
@@ -183,7 +183,7 @@ See further below how to generate the SSH key</p>
 </ul>
 <p><br></p>
 <p> To see the details of a user please make sure to first select the user from the left-side users list:
-<img src="./images/user-see-details.png" alt=""></p>
+<img src="images/user-see-details.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to create a user the below permission needs to be enabled for your user:</p>
 <ul>
