--- a/home/techguides/components-products.html
+++ b/home/techguides/components-products.html
@@ -137,7 +137,7 @@ An organization can define as many components as needed but should have all mand
 </li>
 </ol>
 <p>See below example:</p>
-<p><img src="./images/products-add-component.png" alt=""></p>
+<p><img src="images/products-add-component.png" alt=""></p>
 <p>A folder is automatically created into the repository <em>(we are using JFrog Artifactory)</em> with the name of your component and will be always created under the default <strong>stable_dev</strong> stage. This is the path where the components&#39; files should be uploaded as explained on the next steps.</p>
 <p><em>(Please note that the components&#39; artifacts can be uploaded any time before running a factory).</em></p>
 <p><em>(If the related artifacts are not uploaded, running the factory will not be possible and an error message will be thrown).</em></p>
@@ -191,7 +191,7 @@ Also the binaries/ artifacts have to be uploaded each time a component is update
 <img src="images/components-and-products-artifactorykey.png" alt=""></p>
 </li>
 <li><p><strong>DestinationURL</strong> represents the exact location of the file that will be uploaded in the artifactory together with the name of the binary. For this operation, you need to take the exact path of the artifactory from the TCD portal from the Upload URL field that is displayed on the screen after the component is created:
-<img src="./images/components-and-products-uploadurl.png" alt=""></p>
+<img src="images/components-and-products-uploadurl.png" alt=""></p>
 </li>
 <li><p><strong>fileToUpload</strong> represents the binary that should be uploaded from your local machine and it must contain also the path where is present.</p>
 </li>
@@ -233,12 +233,12 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 <li><p>For all added components, make sure you add the related files archive into the artifactory as explained above.</p>
 </li>
 </ul>
-<p><img src="./images/products-template.png" alt=""></p>
+<p><img src="images/products-template.png" alt=""></p>
 <p><br>
 </br></p>
 <h3 id="how-to-delete-a-component">How to Delete a Component</h3>
 <p>Components fields are not editable, so you have only the options to create or to delete them.</p>
-<p> <img src="./images/delete-component.png" alt=""></p>
+<p> <img src="images/delete-component.png" alt=""></p>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">If your component is <strong>attached to a Product</strong>, you will not be able to delete it. <p>
 <p>You need first to delete the product, then return to the component and click <strong>Delete</strong> button.</span></p>
 </div>
@@ -276,7 +276,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </ol>
 <p>See also below example. </p>
 <p><em>For components, the selection order is not important.</em></p>
-<p><img src="./images/products-add-product.png" alt=""></p>
+<p><img src="images/products-add-product.png" alt=""></p>
 <p>In addition to the principle product which has all template mandatory components, you will need to create other products - Base Products - that will be used to be tested.</p>
 <p>To sort the products alphabetically, hover over the <strong>Name</strong> field from the top of the Products List.</p>
 <p><br>
@@ -301,7 +301,7 @@ curl -H &quot;X-JFrog-Art-Api:AKCp5dKYyM9WMoiacim9yedAZfG6gLwwcYugPmzZhqHkdRe6ex
 </br></p>
 <h1 id="artifactory-view">Artifactory view</h1>
 <p>The artifactory view displays the uploaded components that are available for the particular stages. By expanding the components, the user triggers a download of the respective component zip file.</p>
-<p><img src="./images/artifactory_view.png" alt=""></p>
+<p><img src="images/artifactory_view.png" alt=""></p>
 <p><br>
 </br></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
