--- a/home/techguides/stream.html
+++ b/home/techguides/stream.html
@@ -117,7 +117,7 @@ The parts of the stream are listed below:</p>
 <li><p>Click <strong>Create</strong></p>
 </li>
 </ol>
-<p><img src="./images/streams-create.png" alt=""></p>
+<p><img src="images/streams-create.png" alt=""></p>
 <ol>
 <li><p>After the successful creation, your stream will appear on the screen <em>(in case you already have other streams, the newly created will be the last in chronological order)</em> and it will automatically have associated the default stage named &#39;Primary_stage&#39; (as in the current example). Please note that the default stage name is defined in the metadata settings of your organization (On the main menu &gt; General).</p>
 </li>
@@ -126,13 +126,13 @@ The parts of the stream are listed below:</p>
 <li><p>You can choose which details of the stream you need to be displayed click on the <strong>Columns</strong> field and select from the drop-down the information you need to see.</p>
 </li>
 </ol>
-<p><img src="./images/streams-created.png" alt=""></p>
+<p><img src="images/streams-created.png" alt=""></p>
 <h2 id="edit-a-stream">Edit a Stream</h2>
 <p>You can edit anytime the name, the description of the stage or choose the enable/ disable option. Click on <strong>Update Stream</strong> and the changes will be visible instantly.</p>
-<p><img src="./images/streams_edited.png" alt=""></p>
+<p><img src="images/streams_edited.png" alt=""></p>
 <h2 id="clone-a-stream">Clone a Stream</h2>
 <p>You can clone a stream as well. This action will copy the latest version of all components in the default stage to the new stream. When cloning the stream, you can add a stream name, stream description and enable/disable it.</p>
-<p><img src="./images/streams-cloned.png" alt=""> </p>
+<p><img src="images/streams-cloned.png" alt=""> </p>
 <h2 id="delete-a-stream">Delete a Stream</h2>
 <div class="NOTE"><h5>Note</h5><p><span style="color:red">In order to delete a stream, you need to delete first all the subsequent features created. See example and explanations below.</span></p>
 </div>
@@ -147,14 +147,14 @@ The parts of the stream are listed below:</p>
 <li>In order to be able to delete a stream that has <strong>more than the Primary Stage</strong>, we need first to go and delete the stages attached to it.</li>
 <li>Go first to Stages button on the left menu &gt; Select first your stream (top right) &gt; Select the stage that you want to delete (others then the Primary Stage - <em>because this stage cannot be deleted</em>) &gt; And click the <strong>delete</strong> button.</li>
 </ul>
-<p><img src="./images/streams-delete-stage.png" alt=""> </p>
+<p><img src="images/streams-delete-stage.png" alt=""> </p>
 <ul>
 <li>Go back to Streams and you will notice that your stream has only the Primary Stage associated, therefore you are able to delete the stream. Click the Delete button.</li>
 </ul>
-<p><img src="./images/streams-delete-streams.png" alt=""></p>
+<p><img src="images/streams-delete-streams.png" alt=""></p>
 <p>If you have added other stages and also components and products, first delete all the products, then the components, then the associated stages and finally you will be able to delete the stream. In case you skip one of these features deletion, the system will notify that is not possible to delete the respective stage.</p>
 <p> To see the details of a stream please select it from the streams&#39; list:
- <img src="./images/streams-see-details.png" alt=""></p>
+ <img src="images/streams-see-details.png" alt=""></p>
 <h1 id="user-permissions-required">User Permissions Required</h1>
 <p>To be able to perform the above operations the below permissions need to be enabled for your user:</p>
 <ul>
