--- a/home/techguides/templates-list.html
+++ b/home/techguides/templates-list.html
@@ -230,6 +230,11 @@
 </thead>
 <tbody>
 <tr>
+<td>MB-FCM-ONLY-Jboss-SQL-202004</td>
+<td>202004</td>
+<td>FCM Standalone for 202004</td>
+</tr>
+<tr>
 <td>MB-FCM-ONLY-Jboss-SQL-202003</td>
 <td>202003</td>
 <td>FCM Standalone for 202003</td>
@@ -247,12 +252,12 @@
 <tr>
 <td>MB-FCM-ONLY-Jboss-SQL-201912</td>
 <td>201912</td>
-<td>FCM Standalone for 201912</td>
+<td>FCM T24 201912 (Jboss and SQL)</td>
 </tr>
 <tr>
 <td>MB-FCM-ONLY-Jboss-SQL-201911</td>
 <td>201911</td>
-<td>FCM Standalone for 201911</td>
+<td>FCM T24 201911</td>
 </tr>
 <tr>
 <td>MB-FCM-ONLY-Jboss-SQL-201910</td>
